--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
+    <link rel= "stylesheet" href= "style.css">
+</head>
   <body>
+    <div class="header">
+        <h1>Techpedia</h1>
+      </div>
       <div id="mainBody"></div>
       <div id="table"></div>
       
