--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-      <div class="text">Techpedia</div>
+        <div class="text">Techpedia</div>
     </header>
     <div id="mainBody"></div>
     <div class="centered">
-        <table class="table">
+        <table class="table row">
             <thead class="thead" id="table">
             </thead>
-        </table>
-        <table id= "table2">
-
-        </table>
+            
+            </table>
+            <div class="middle"></div>
+            <div id="centerdiv">
+                <table id="table2">
+                </table>
+            </div>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -36,6 +38,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script src="images.js"></script>
 </body>
 
 </html>
