final commit, fully functional website

--- a/index.html
+++ b/index.html
@@ -14,17 +14,22 @@
 
 <body>
     <header>
-        <div class="text">Techpedia</div>
+        <h1 class="techpedia"><img id="techpedia" src="https://i.ibb.co/0Myp7Qx/logo-final.png"></h1class="techpedia">
     </header>
-    <div id="mainBody"></div>
+    <div class="quote">
+        <h3 id="quote">"The popularity of a web framework is important because it is an indicator of whether it will continue to be maintained, and what resources are likely to be available in terms of documentation, add-on libraries, and technical support." -Mozilla Develeper Network</h5>
+        </div>
+    <div id="mainBody">
+    </div>
     <div class="centered">
         <table class="table row">
             <thead class="thead" id="table">
             </thead>
-        <table id="table2">
-        </table>
+            <table id="table2">
+            </table>
 
     </div>
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
