removed useless files and added the link to the wiki page as a footer

--- a/index.html
+++ b/index.html
@@ -17,23 +17,29 @@
         <h1 class="techpedia"><img id="techpedia" src="https://i.ibb.co/0Myp7Qx/logo-final.png"></h1class="techpedia">
     </header>
     <div class="quote">
-        <h3 id="quote">"The popularity of a web framework is important because it is an indicator of whether it will continue to be maintained, and what resources are likely to be available in terms of documentation, add-on libraries, and technical support." -Mozilla Develeper Network</h5>
-        </div>
+        <h3 id="quote">"The popularity of a web framework is important because it is an indicator of whether it will
+            continue to be maintained, and what resources are likely to be available in terms of documentation, add-on
+            libraries, and technical support." -Mozilla Develeper Network</h5>
+    </div>
     <div id="mainBody">
     </div>
     <div class="centered">
         <table class="table row">
             <thead class="thead" id="table">
             </thead>
-            
+
+        </table>
+        <div class="middle"></div>
+        <div id="centerdiv">
+            <table id="table2">
             </table>
-            <div class="middle"></div>
-            <div id="centerdiv">
-                <table id="table2">
-                </table>
+            <br>
+            <div class="wikilink">
+                <a id="wikilink">- Link To Wikipedia Page -</a>
             </div>
+        </div>
     </div>
-    
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
